Fix#3212: Frontend_V2 -- CSS fix for private badge in select_phase dropdown(#3225)
* Fixed SelectPhase Private badge CSS

* Changed class for bootstrap-grid in selectphase

* Wrapping PhaseSplit for long strings

* Fixed Overflowing

--- a/frontend_v2/src/app/components/utility/selectphase/selectphase.component.scss
+++ b/frontend_v2/src/app/components/utility/selectphase/selectphase.component.scss
@@ -6,6 +6,14 @@
   display: none;
 }
 
+.phase_name {
+  white-space: normal;
+}
+
+.select_phase_form {
+  display: unset;
+}
+
 ::ng-deep .mat-select-panel mat-option.mat-option {
   height: unset;
 }
